# Quantum-Dueling-New

./: CMakeLists.txt  HeuristicSearch.cpp  README.md  find_best_c.cpp  find_state_evolution.cpp  iteration_probability_original.cpp  maximum_probability_all_M_original.cpp  qd_apps.cpp  test.cpp
include/: Dueling.cpp  Dueling.h  HeuristicDueling.cpp  HeuristicDueling.h  InitApp.cpp  InitApp.h  InitMethods.cpp  InitMethods.h  InitProblemInterface.h  p3sat.cpp  p3sat.h  uba_int.cpp  uba_int.h
